--- a/TalismanChar.css
+++ b/TalismanChar.css
@@ -84,7 +84,10 @@ h5 {
     line-height: 80%;
 }
 
-
+button[type=roll].sheet-d6-dice::before {
+    font-family: 'dicefontd6';
+    content: 'F ';
+}
 
 /* contenc added from CSS */
 
@@ -142,7 +145,6 @@ textarea {
 }
 
 
-
 /* Targetted styling that only effects elements with these classes */
 input.sheet-short {
 	width: 17%;
@@ -186,6 +188,13 @@ span.sheet-dee {
 
 
 
+.npc {
+  width: 15em;
+  border: 1px solid #333;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);    
+}
 
 /* Dice rolling template */
 
@@ -233,4 +242,19 @@ span.sheet-dee {
 
 .sheet-rolltemplate-test .inlinerollresult.importantroll {
 	border: 2px solid #4A57ED;
+}
+/*Configure the tab buttons*/
+.sheet-character,
+.sheet-combat,
+.sheet-spellsgear,
+.sheet-npcsheet {
+	display: none;
+}
+
+/* show the selected tab */
+.sheet-tabstoggle[value="character"] ~ div.sheet-character,
+.sheet-tabstoggle[value="combat"] ~ .sheet-combat,
+.sheet-tabstoggle[value="spellsgear"] ~ div.sheet-spellsgear,
+.sheet-tabstoggle[value="npcsheet"] ~ div.sheet-npcsheet,{
+	display: block;
 }
