--- a/TalismanChar.css
+++ b/TalismanChar.css
@@ -247,6 +247,7 @@ span.sheet-dee {
 .sheet-character,
 .sheet-combat,
 .sheet-spellsgear,
+.sheet-journal,
 .sheet-npcsheet {
 	display: none;
 }
@@ -255,6 +256,7 @@ span.sheet-dee {
 .sheet-tabstoggle[value="character"] ~ div.sheet-character,
 .sheet-tabstoggle[value="combat"] ~ .sheet-combat,
 .sheet-tabstoggle[value="spellsgear"] ~ div.sheet-spellsgear,
+.sheet-tabstoggle[value="journal"] ~ div.sheet-journal,
 .sheet-tabstoggle[value="npcsheet"] ~ div.sheet-npcsheet,{
 	display: block;
 }
